--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@
       font-optical-sizing: auto;
       font-weight: 1000;
       font-style: normal;
-      text-shadow: 1px 1px 1px rgb(68, 68, 68);
+      text-shadow: 2px 1px 1px rgba(0, 0, 0, 0.594);
       color: #ffb01d;
 
       font-size: 3rem;
@@ -30,7 +30,7 @@
   font-optical-sizing: auto;
   font-weight: 1000;
   font-style: normal;
-  text-shadow: 1px 1px 1px rgb(68, 68, 68);
+  text-shadow: 3px 1px 1px rgba(0, 0, 0, 0.661);
       color: #ffb01d;
       font-size: 2rem;
 
